stricttype and religion filtering
